Closed
Bug 1809502
Opened 3 years ago
Closed 3 years ago
[wmfme] try server windows 11 asan failure
Categories
(Testing :: General, defect, P2)
Tracking
(firefox111 fixed)
RESOLVED
FIXED
111 Branch
Tracking | Status | |
---|---|---|
firefox111 | --- | fixed |
People
(Reporter: alwu, Assigned: alwu)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
Fork from bug 1808063 comment 7, fail link.
[task 2023-01-10T17:29:27.173Z] 17:29:27 INFO - GECKO(6992) | =================================================================
[task 2023-01-10T17:29:27.174Z] 17:29:27 ERROR - GECKO(6992) | ==4196==ERROR: AddressSanitizer: heap-use-after-free on address 0x11552e405268 at pc 0x7ff981d3b6f2 bp 0x003124c7e020 sp 0x003124c7e068
[task 2023-01-10T17:29:27.174Z] 17:29:27 INFO - GECKO(6992) | READ of size 2 at 0x11552e405268 thread T94
[task 2023-01-10T17:29:27.330Z] 17:29:27 INFO - GECKO(6992) | ==4196==WARNING: Can't read from symbolizer at fd 3976
[task 2023-01-10T17:29:27.331Z] 17:29:27 INFO - GECKO(6992) | ==4196==WARNING: Can't write to symbolizer at fd 3972
[task 2023-01-10T17:29:27.358Z] 17:29:27 INFO - GECKO(6992) | ==4196==WARNING: Can't read from symbolizer at fd 3968
[task 2023-01-10T17:29:27.358Z] 17:29:27 INFO - GECKO(6992) | ==4196==WARNING: Can't write to symbolizer at fd 3976
[task 2023-01-10T17:29:27.383Z] 17:29:27 INFO - GECKO(6992) | ==4196==WARNING: Can't read from symbolizer at fd 3972
[task 2023-01-10T17:29:27.384Z] 17:29:27 INFO - GECKO(6992) | ==4196==WARNING: Can't write to symbolizer at fd 3968
[task 2023-01-10T17:29:27.410Z] 17:29:27 INFO - GECKO(6992) | ==4196==WARNING: Can't read from symbolizer at fd 3976
[task 2023-01-10T17:29:27.410Z] 17:29:27 INFO - GECKO(6992) | ==4196==WARNING: Can't write to symbolizer at fd 3972
[task 2023-01-10T17:29:27.412Z] 17:29:27 INFO - GECKO(6992) | ==4196==WARNING: Failed to use and restart external symbolizer!
[task 2023-01-10T17:29:28.500Z] 17:29:28 INFO - GECKO(6992) | #0 0x7ff981d3b6f1 (Z:\task_167337071820987\build\application\firefox\xul.dll+0x18845b6f1)
[task 2023-01-10T17:29:28.502Z] 17:29:28 INFO - GECKO(6992) | #1 0x7ff97a521f7c (Z:\task_167337071820987\build\application\firefox\xul.dll+0x180c41f7c)
[task 2023-01-10T17:29:28.503Z] 17:29:28 INFO - GECKO(6992) | #2 0x7ff97a55b821 (Z:\task_167337071820987\build\application\firefox\xul.dll+0x180c7b821)
[task 2023-01-10T17:29:28.503Z] 17:29:28 INFO - GECKO(6992) | #3 0x7ff97a548574 (Z:\task_167337071820987\build\application\firefox\xul.dll+0x180c68574)
[task 2023-01-10T17:29:28.504Z] 17:29:28 INFO - GECKO(6992) | #4 0x7ff97a55739d in NS_ProcessNextEvent /builds/worker/checkouts/gecko/xpcom/threads/nsThreadUtils.cpp:476
[task 2023-01-10T17:29:28.504Z] 17:29:28 INFO - GECKO(6992) | #5 0x7ff97bb5c84e in mozilla::ipc::MessagePumpForNonMainThreads::Run /builds/worker/checkouts/gecko/ipc/glue/MessagePump.cpp:300
[task 2023-01-10T17:29:28.505Z] 17:29:28 INFO - GECKO(6992) | #6 0x7ff97ba73a82 in MessageLoop::RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:374
[task 2023-01-10T17:29:28.506Z] 17:29:28 INFO - GECKO(6992) | #7 0x7ff97ba73857 in MessageLoop::Run /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:356
[task 2023-01-10T17:29:28.506Z] 17:29:28 INFO - GECKO(6992) | #8 0x7ff97a53e0d7 in nsThread::ThreadFunc /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:383
[task 2023-01-10T17:29:28.507Z] 17:29:28 INFO - GECKO(6992) | #9 0x7ff998d31a75 in _PR_NativeRunThread /builds/worker/checkouts/gecko/nsprpub/pr/src/threads/combined/pruthr.c:399
[task 2023-01-10T17:29:28.508Z] 17:29:28 INFO - GECKO(6992) | #10 0x7ff998d0b55b in pr_root /builds/worker/checkouts/gecko/nsprpub/pr/src/md/windows/w95thred.c:139
[task 2023-01-10T17:29:28.508Z] 17:29:28 INFO - GECKO(6992) | #11 0x7ff9c6ab9362 in recalloc+0xa2 (C:\Windows\System32\ucrtbase.dll+0x180029362)
[task 2023-01-10T17:29:28.509Z] 17:29:28 INFO - GECKO(6992) | #12 0x7ff997f1abb3 in __asan::AsanThread::ThreadStart /builds/worker/fetches/llvm-project/compiler-rt/lib/asan/asan_thread.cpp:277
[task 2023-01-10T17:29:28.510Z] 17:29:28 INFO - GECKO(6992) | #13 0x7ff9c74826bc in BaseThreadInitThunk+0x1c (C:\Windows\System32\KERNEL32.DLL+0x1800126bc)
Assignee | ||
Comment 1•3 years ago
|
||
Pushed by alwu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a79c0d4a68ca
don't check PROPVARIANT on the task queue because it might be destroyed already. r=media-playback-reviewers,padenot
Comment 3•3 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 3 years ago
status-firefox111:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•