Bug 1809502 - don't check PROPVARIANT on the task queue because it might be destroyed already. r=media-playback-reviewers,padenot

Differential Revision: https://phabricator.services.mozilla.com/D166843